--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,39 +1,35 @@
-<header>
-  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
-    <%= link_to '/', class: 'navbar-brand' do %>
-        <p class='logo'>Listener</p>
+<header class="lp-header">
+  <div class="logo-area">
+    <%= link_to root_path, class: "logo-link" do %>
+      <span class="logo-text">Listener</span>
     <% end %>
-    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
-      aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-      <span class='navbar-toggler-icon'></span>
-    </button>
+  </div>
 
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-      <ul class='navbar-nav ms-auto main-nav align-items-center'>
-        <li class='nav-item dropdown dropdown-slide'>
-          <%= link_to '掲示板', '#', class: 'nav-link dropdown-toggle', data: { bs_toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-board-menu' %>
-          <div class='dropdown-menu dropdown-menu-end'>
-            <%= link_to '掲示板一覧', '#', class: 'dropdown-item' %>
-            <%= link_to '掲示板作成', '#', class: 'dropdown-item' %>
-          </div>
-        </li>
+  <!-- ハンバーガーボタン -->
+  <button class="hamburger" id="hamburger-btn" aria-expanded="false" aria-label="メニューを開く">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 
-        <li class='nav-item'>
-          <%= link_to 'ブックマーク一覧', '#', class: 'nav-link' %>
-        </li>
-
-        <li class='nav-item dropdown dropdown-slide'>
-          <%= link_to '#', class: 'nav-link', data: { bs_toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' }, id: 'header-profile' do %>
-            <i class='bi bi-person-circle fs-4'></i>
-          <% end %>
-          <div class='dropdown-menu dropdown-menu-end'>
-            <div class='dropdown-item'><%= current_user.name %></div>
-            <div class='dropdown-divider'></div>
-            <%= link_to 'プロフィール', edit_user_registration_path, class: 'dropdown-item' %>
-            <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %>
-          </div>
-        </li>
-      </ul>
-    </div>
+  <!-- ハンバーガーメニュー -->
+  <nav class="hamburger-menu" id="hamburger-menu">
+    <ul>
+      <li><%= link_to "ホーム", root_path %></li>
+      <li><%= link_to "Listenerとは", "#" %></li>
+      <li><%= link_to "Listenerの特徴", "#" %></li>
+      <li><%= link_to "利用規約", "#" %></li>
+      <li><%= link_to "よくある質問", "#" %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "プロフィール", edit_user_registration_path %></li>
+        <li><%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %></li>
+      <% else %>
+        <li><%= link_to "ログインする", new_user_session_path %></li>
+        <li><%= link_to "サインアップ", new_user_registration_path %></li>
+      <% end %>
+    </ul>
   </nav>
+
+  <!-- メニューオーバーレイ -->
+  <div id="menu-overlay" class="menu-overlay"></div>
 </header>
